force-app/main/default/objects/Batch_Setup__c/fields/AutoApprovedEmail__c.field-meta.xml
<CustomField>
    <fullName>AutoApprovedEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoApprovedEmail</label>
    <type>Checkbox</type>
</CustomField>