force-app/main/default/objects/Batch_Setup__c/fields/BatchForApprovingReimburse__c.field-meta.xml
<CustomField>
    <fullName>BatchForApprovingReimburse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BatchForApprovingReimburse</label>
    <type>Checkbox</type>
</CustomField>