force-app/main/default/objects/Batch_Setup__c/fields/InsertLastMonthReimbursement__c.field-meta.xml
<CustomField>
    <fullName>InsertLastMonthReimbursement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>InsertLastMonthReimbursement</label>
    <type>Checkbox</type>
</CustomField>